@@ -1432,27 +1432,54 @@ do_variable_definition (const floc *flocp, const char *varname, const char *valu
     case f_append:
     case f_append_value:
       {
-        /* If we have += but we're in a target variable context, we want to
-           append only with other variables in the context of this target.  */
-        if (scope)
+        int override = 0;
+        if (scope == s_global)
+          v = lookup_variable (varname, strlen (varname));
+        else
           {
+            /* When appending in a target/pattern variable context, we want to
+               append only with other variables in the context of this
+               target/pattern.  */
             append = 1;
             v = lookup_variable_in_set (varname, strlen (varname),
                                         current_variable_set_list->set);
+            if (v)
+              {
+                /* Don't append from the global set if a previous non-appending
+                   target/pattern-specific variable definition exists. */
+                if (!v->append)
+                  append = 0;
 
-            /* Don't append from the global set if a previous non-appending
-               target-specific variable definition exists. */
-            if (v && !v->append)
-              append = 0;
+                if (scope == s_pattern &&
+                    (v->origin == o_env_override || v->origin == o_command))
+                  {
+                    /* This is the case of multiple target/pattern specific
+                       definitions/appends, e.g.
+                         al%: hello := first
+                         al%: hello += second
+                       in the presence of a command line definition or an
+                       env override.  Do not merge x->value and value here.
+                       For pattern-specific variables the values are merged in
+                       recursively_expand_for_file.  */
+                    override = 1;
+                    append = 1;
+                  }
+              }
           }
-        else
-          v = lookup_variable (varname, strlen (varname));
 
-        if (v == 0)
+        if (!v)
           {
-            /* There was no old value.
-               This becomes a normal recursive definition.  */
+            /* There was no old value: make this a recursive definition.  */
             newval = value;
+            flavor = f_recursive;
+          }
+        else if (override)
+          {
+            /* Command line definition / env override takes precedence over
+               a pattern/target-specific append.  */
+            newval = value;
+            /* Set flavor to f_recursive to recursively expand this variable
+               at build time in recursively_expand_for_file.  */
             flavor = f_recursive;
           }
         else
